# mac-streamdeck-soundboard

./: .gitignore  Makefile
mesi.soundboard.sdPlugin/: manifest.json
plugin/: AudioInterface.cpp  AudioInterface.hpp  CMakeLists.txt  SoundboardPlugin.cpp  SoundboardPlugin.hpp  main.cpp  portaudio.cpp
propertyInspector/: index.html  sdpi.css
